wind-turbine: update notebook for SSO and user

--- a/demos/wind-turbine/wind-turbine.ipynb
+++ b/demos/wind-turbine/wind-turbine.ipynb
@@ -59,7 +59,7 @@
     "Execute the cell below and:\n",
     "\n",
     "1. Select `Add Endpoint`.\n",
-    "1. Select `Basic_Access`, paste your Livy endpoint, and authenticate with your credentials.\n",
+    "1. Select `Single Sign-On`, keep existing Livy endpoint (should look like http://livy-0.livy-svc.spark.svc.cluster.local:8998).\n",
     "1. Select `Create Session`.\n",
     "1. Provide a name, select the `python` language, and click `Create Session`.\n",
     "\n",
@@ -859,7 +859,7 @@
    "outputs": [],
    "source": [
     "%%spark\n",
-    "gbm_model.write().overwrite().save(\"file:///mounts/shared-volume/shared/auto-spark/GBM.model\")"
+    "gbm_model.write().overwrite().save('file:////mounts/shared-volume/user/auto-spark/GBM.model')"
    ]
   },
   {
@@ -872,7 +872,7 @@
    "outputs": [],
    "source": [
     "%%spark\n",
-    "gbm_model_dtap = GBTRegressionModel.load(\"file:///mounts/shared-volume/shared/auto-spark/GBM.model\")"
+    "gbm_model_dtap = GBTRegressionModel.load(\"file:///mounts/shared-volume/user/auto-spark/GBM.model\")"
    ]
   },
   {
