remove %%spark, use PySpark kernel, use %%local

--- a/demos/wind-turbine/wind-turbine.ipynb
+++ b/demos/wind-turbine/wind-turbine.ipynb
@@ -66,7 +66,7 @@
     "Give it a few minutes for your session to initialize. Once ready, the Manage Sessions pane will activate, displaying\n",
     "your session ID. When the session state turns to idle, you're all set. This process can take up to five minutes.\n",
     "\n",
-    "> To further configure Sparkmagic, you can make use of a config.json file located at ~/.sparkmagic/config.json."
+    "> You can use %config_spark magic to further configure spark cluster. Just make sure to restart the kernel after configuration."
    ]
   },
   {
@@ -78,7 +78,6 @@
    },
    "outputs": [],
    "source": [
-    "%reload_ext sparkmagic.magics\n",
     "%manage_spark"
    ]
   },
@@ -93,9 +92,9 @@
     "\n",
     "![spark-interactive-ui](images/spark-interactive-ui.png)\n",
     "\n",
-    "You are now prepared to embark on your first interaction with Livy. Whenever you initiate a cell with the `%%spark`\n",
-    "magic command, the code within that cell is not executed locally. Instead, it is executed within a Spark context managed\n",
-    "by Livy. Livy handles everything seamlessly and provide you with a response containing the results.\n",
+    "Once cluster is ready, the Spark session variable `spark` is automatically created for you to use.\n",  
+    "You are now prepared to embark on your first interaction with Livy.\n",
+    "Livy handles everything seamlessly and provide you with a response containing the results.\n",
     "\n",
     "With Sparkmagic at your side, you can leave the networking part to it. Sparkmagic takes care of all the intricate\n",
     "details, effortlessly creating and sending requests to the Livy server. Finally, it seamlessly renders the response\n",
@@ -111,6 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%local\n",
     "import os\n",
     "import shutil\n",
     "\n",
@@ -142,7 +142,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "import pyspark\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -151,7 +151,6 @@
     "\n",
     "from warnings import filterwarnings\n",
     "\n",
-    "from pyspark.sql import SparkSession\n",
     "from pyspark.conf import SparkConf\n",
     "from pyspark import SparkContext\n",
     "from pyspark.sql.functions import substring\n",
@@ -170,26 +169,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2f096b2-ef79-4e29-af2d-eda6e067811b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%spark\n",
-    "spark = SparkSession.builder.appName(\"wind-turbine\").getOrCreate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "3cca547e-4945-46a0-a2d5-643ba75e480d",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "java_import(spark._sc._jvm, \"org.apache.spark.sql.api.python.*\")"
    ]
   },
@@ -216,7 +202,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "spark_df = spark.read.csv(\n",
     "    'file:///mounts/shared-volume/shared/auto-spark/T1.csv',\n",
     "    header=True, inferSchema=True)"
@@ -244,7 +230,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Caching the dataset\n",
     "spark_df.cache()\n",
     "\n",
@@ -296,7 +282,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Extracting a substring from columns to create month and hour variables\n",
     "spark_df = spark_df.withColumn(\"month\", substring(\"date/time\", 4,2))\n",
     "spark_df = spark_df.withColumn(\"hour\", substring(\"date/time\", 12,2))\n",
@@ -329,7 +315,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "pd.options.display.float_format = '{:.2f}'.format\n",
     "spark_df.select('wind speed (m/s)', 'theoretical_power_curve (kwh)', 'lv activepower (kw)').toPandas().describe()"
    ]
@@ -355,7 +341,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Taking a random sample from the big data\n",
     "sample_df = spark_df.sample(withReplacement=False, fraction=0.1, seed=42).toPandas()\n",
     "\n",
@@ -381,7 +367,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "plt.clf()\n",
     "\n",
     "# Compute the average power production by month\n",
@@ -401,7 +387,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "plt.clf()\n",
     "\n",
     "# Compute the average power production by hour\n",
@@ -421,7 +407,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Compute the correlation between the features of the dataset\n",
     "pd.set_option('display.max_columns', None)\n",
     "sample_df[columns].corr()\n",
@@ -440,7 +426,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Finding the average power production for 5 m/s wind speed increments\n",
     "avg_power = []\n",
     "wind_speed = []\n",
@@ -470,7 +456,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Creating the polar diagram\n",
     "from math import radians\n",
     "\n",
@@ -508,7 +494,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Plot the real power production over the theoritical\n",
     "plt.clf()\n",
     "plt.figure(figsize=(10,6))\n",
@@ -529,7 +515,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Filter the big data where the real and theoritical power productions are equal to 0\n",
     "zero_theo_power = spark_df.filter((spark_df['lv activepower (kw)'] == 0)\n",
     "                                  & (spark_df['theoretical_power_curve (kwh)'] == 0)).toPandas()\n",
@@ -546,7 +532,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "plt.clf()\n",
     "# Examine the wind speed distribution for 0 power production\n",
     "zero_theo_power['wind speed (m/s)'].hist()\n",
@@ -566,7 +552,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Observations for the wind speed > 3m/s and power production = 0, \n",
     "# while theoritically there should be power production\n",
     "zero_power = spark_df.filter((spark_df['lv activepower (kw)'] == 0)\n",
@@ -585,7 +571,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "plt.clf()\n",
     "zero_power['wind speed (m/s)'].plot.hist(bins=8)\n",
     "plt.xlabel('Wind Speed (m/s)')\n",
@@ -605,7 +591,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# The number of the examples that show a 0 power production\n",
     "# while theoritically there should be power production\n",
     "print(\"The number of the examples that show a 0 power production\"\n",
@@ -621,7 +607,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Excluding the observations meeting the filter criterias \n",
     "spark_df = spark_df.filter(~((spark_df['lv activepower (kw)'] == 0)\n",
     "                            & (spark_df['theoretical_power_curve (kwh)'] != 0)\n",
@@ -638,7 +624,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "columns = ['wind speed (m/s)', 'wind direction (deg)', 'theoretical_power_curve (kwh)', 'lv activepower (kw)']\n",
     "i=1\n",
     "plt.clf()\n",
@@ -663,7 +649,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Let's find and exclude possible outliers.\n",
     "# Create a pandas df for visualization\n",
     "wind_speed = spark_df.select('wind speed (m/s)').toPandas()\n",
@@ -689,7 +675,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "\n",
     "# Fancy indexing for outliers\n",
     "outlier_tf = (wind_speed['wind speed (m/s)'] < lower) | (wind_speed['wind speed (m/s)'] > upper)\n",
@@ -709,7 +695,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "(spark_df.select('wind speed (m/s)', 'lv activepower (kw)')\n",
     "         .filter(spark_df['wind speed (m/s)'] >= 19)\n",
     "         .agg({'lv activepower (kw)':'mean'}).show())"
@@ -724,7 +710,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "from pyspark.sql import functions as F\n",
     "spark_df = spark_df.withColumn('wind speed (m/s)', \n",
     "                               F.when(F.col('wind speed (m/s)') > 19.447, 19)\n",
@@ -741,7 +727,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# High level power production\n",
     "spark_df.filter(((spark_df['month'] == 3) | (spark_df['month'] == 8) | (spark_df['month'] == 11)) \n",
     "                & ((spark_df['hour'] >= 16) | (spark_df['hour'] <= 24)) \n",
@@ -759,7 +745,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Low level power production\n",
     "spark_df.filter((spark_df['month'] == 7) \n",
     "                & ((spark_df['hour'] >= 9) | (spark_df['hour'] <= 11)) \n",
@@ -791,7 +777,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Converting lv activepower (kw) variable as label\n",
     "spark_df = spark_df.withColumn('label', spark_df['lv activepower (kw)'])\n",
     "\n",
@@ -814,7 +800,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Split the dataset:\n",
     "# 80% for training\n",
     "# 20% for testing\n",
@@ -835,7 +821,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Creating the gbm regressor object\n",
     "gbm = GBTRegressor(featuresCol='features', labelCol='label')\n",
     "\n",
@@ -858,7 +844,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "gbm_model.write().overwrite().save(\"file:///mounts/shared-volume/shared/auto-spark/GBM.model\")"
    ]
   },
@@ -871,7 +857,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "gbm_model_dtap = GBTRegressionModel.load(\"file:///mounts/shared-volume/shared/auto-spark/GBM.model\")"
    ]
   },
@@ -884,7 +870,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Initial model success\n",
     "evaluator = RegressionEvaluator(predictionCol='prediction', labelCol='label')\n",
     "\n",
@@ -902,7 +888,7 @@
    },
    "outputs": [],
    "source": [
-    "%%spark\n",
+    
     "# Converting sample_df back to Spark dataframe\n",
     "eva_df = spark.createDataFrame(sample_df)\n",
     "\n",
@@ -941,21 +927,19 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wind-turbine",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "wind-turbine"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
