--- a/demos/wind-turbine/wind-turbine.ipynb
+++ b/demos/wind-turbine/wind-turbine.ipynb
@@ -66,7 +66,7 @@
     "Give it a few minutes for your session to initialize. Once ready, the Manage Sessions pane will activate, displaying\n",
     "your session ID. When the session state turns to idle, you're all set. This process can take up to five minutes.\n",
     "\n",
-    "> You can use %config_spark magic to further configure spark cluster. Just make sure to restart the kernel after configuration."
+    "You can use %config_spark magic to further configure spark cluster. Just make sure to restart the kernel after configuration.\n"
    ]
   },
   {
