--- a/demos/wind-turbine/wind-turbine.ipynb
+++ b/demos/wind-turbine/wind-turbine.ipynb
@@ -56,7 +56,7 @@
     "extension. Sparkmagic integrates with Livy, to provide the underlying communication layer between the Jupyter kernel and\n",
     "the Spark cluster.\n",
     "\n",
-    "Execute the cell below and:\n",
+    "Execute `%manage_spark`:\n",
     "\n",
     "1. Select `Add Endpoint`.\n",
     "1. Select `Basic_Access`, paste your Livy endpoint, and authenticate with your credentials.\n",
@@ -66,7 +66,7 @@
     "Give it a few minutes for your session to initialize. Once ready, the Manage Sessions pane will activate, displaying\n",
     "your session ID. When the session state turns to idle, you're all set. This process can take up to five minutes.\n",
     "\n",
-    "You can use %config_spark magic to further configure spark cluster. Just make sure to restart the kernel after configuration.\n"
+    "You can use `%config_spark` magic to further configure spark cluster. Just make sure to restart the kernel after configuration.\n"
    ]
   },
   {
