Update s3 cred and endpoint

--- a/Data-Science/MLflow/bike-sharing-mlflow.ipynb
+++ b/Data-Science/MLflow/bike-sharing-mlflow.ipynb
@@ -27,7 +27,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set Expriment"
+    "## User Authentication"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "EZAF_ENV = \"hpe-staging-ezaf\"\n",
+    "token_url = f\"https://keycloak.{EZAF_ENV}.com/realms/UA/protocol/openid-connect/token\"\n",
+    "\n",
+    "data = {\n",
+    "    \"username\" : input(\"Enter username.\"),\n",
+    "    \"password\" : input(\"Enter password.\"),\n",
+    "    \"grant_type\" : \"password\",\n",
+    "    \"client_id\" : \"ua-grant\",\n",
+    "}\n",
+    "\n",
+    "token_responce = requests.post(token_url, data=data, allow_redirects=True, verify=False)\n",
+    "\n",
+    "token = token_responce.json()[\"access_token\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mlflow\n",
+    "import os\n",
+    "def set_exp(exp_name):\n",
+    "    \"\"\"\n",
+    "    This function is used to register an experiment in mlflow tracking service.\n",
+    "    The name of the experiment provided by the user will be set in mlflow.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        usr = \"hpedemo-user01\"\n",
+    "        os.environ['MLFLOW_TRACKING_INSECURE_TLS'] = 'true'\n",
+    "        os.environ[\"AWS_ACCESS_KEY_ID\"] = \"s3\"\n",
+    "        os.environ[\"AWS_SECRET_ACCESS_KEY\"] = token\n",
+    "        os.environ[\"MLFLOW_S3_ENDPOINT_URL\"] = 'http://local-s3-service.ezdata-system.svc.cluster.local:30000'\n",
+    "        os.environ['MLFLOW_S3_IGNORE_TLS'] = f\"true\"\n",
+    "        os.environ['MLFLOW_TRACKING_TOKEN'] = token\n",
+    "        mlflow.set_tracking_uri(f\"https://mlflow.{EZAF_ENV}.com\")\n",
+    "        mlflow.set_experiment(exp_name)\n",
+    "        mlflow.set_tag('mlflow.user', usr)\n",
+    "    except Exception as e:\n",
+    "        print(\"Failed to set user.\")\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set Experiment"
    ]
   },
   {
@@ -46,7 +104,7 @@
    "source": [
     "# Set up an experiment with set_exp from ezmllib.mlflow\n",
     "experiment_name = 'bike-sharing-exp'\n",
-    "mlflow.set_experiment(experiment_name)"
+    "set_exp(experiment_name)"
    ]
   },
   {
