question-answering: Improve the first Notebook
Improve the first Notebook by:
- Fixing typos and wording.
- Adding a table of contents.
- Removing unused import statements.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/question-answering/01.create-vectorstore.ipynb
+++ b/demos/question-answering/01.create-vectorstore.ipynb
@@ -10,7 +10,7 @@
     "# Vector Stores: Embedding and Storing Documents in a Latent Space\n",
     "\n",
     "In this Jupyter Notebook, you explore a foundational element of a question-answering system: the Vector Store. The\n",
-    "Vector Store serves as the key component that allows us to efficiently retrieve relevant context from a corpus of\n",
+    "Vector Store serves as the key component that allows you to efficiently retrieve relevant context from a corpus of\n",
     "documents based on a user's query.\n",
     "\n",
     "<figure>\n",
@@ -35,7 +35,12 @@
     "generating embeddings for each document, then you move on to storing these embeddings in a Vector Store and finally,\n",
     "you see how easy it is to to retrieve documents from the Vector Store based on a query.\n",
     "\n",
-    "First, let's import the libraries you need:"
+    "## Table of Contents\n",
+    "\n",
+    "1. [Load the Documents](#load-the-documents)\n",
+    "1. [Document Processing](#document-processing-chunking-text-for-the-language-model)\n",
+    "1. [Generate and Store Embeddings](#generating-embeddings--storing-them-in-chroma)\n",
+    "1. [Conclusion and Next Steps](#conclusion-and-next-steps)"
    ]
   },
   {
@@ -49,8 +54,6 @@
    "source": [
     "import os\n",
     "import glob\n",
-    "\n",
-    "import mlflow\n",
     "\n",
     "from tqdm import tqdm\n",
     "from langchain.vectorstores import Chroma\n",
@@ -249,11 +252,11 @@
     "structured form that can power a robust question-answering system.\n",
     "\n",
     "However, your journey doesn't end here. Now that you have the Vector Store ready, the next step is to create an\n",
-    "Inference Service that can leverage this store to provide context to user queries. For this, you use KServe, a flexible,\n",
-    "cloud-native platform for serving Machine Learning models.\n",
+    "Inference Service (ISVC) that can leverage this store to provide context to user queries. For this, you use KServe, a\n",
+    "flexible, cloud-native platform for serving Machine Learning models.\n",
     "\n",
-    "In the next Notebook, you set up a custom Inference Service using KServe. This service uses the Vector Store to retrieve\n",
-    "and rank relevant document chunks based on a user's query, providing accurate and efficient context to an LLM!"
+    "In the next Notebook, you set up a custom ISVC using KServe. This service uses the Vector Store to retrieve and rank\n",
+    "relevant document chunks based on a user's query, providing accurate and efficient context to an LLM!"
    ]
   }
  ],
