--- a/demos/question-answering/02.serve-vectorstore.ipynb
+++ b/demos/question-answering/02.serve-vectorstore.ipynb
@@ -20,19 +20,22 @@
     "  </figcaption>\n",
     "</figure>\n",
     "\n",
-    "In this Notebook, you delve deeper. You use MLFlow to log the Chroma DB files as experiment artifacts. Once logged, you\n",
-    "then set up an Inference Service that fetches these artifacts and leverages them to provide context to user inquiries.\n",
-    "For this task, you work with KServe, a Kubernetes-centric platform that offers a serverless blueprint for scaling\n",
-    "Machine Learning models seamlessly.\n",
+    "In this Notebook, you delve deeper. You use MLflow to log the Chroma DB files as experiment artifacts. Once logged, you\n",
+    "then set up an Inference Service (ISVC) that fetches these artifacts and leverages them to provide context to user\n",
+    "inquiries. For this task, you work with KServe, a Kubernetes-centric platform that offers a serverless blueprint for\n",
+    "scaling Machine Learning (ML) models seamlessly.\n",
     "\n",
     "A crucial point to remember: KServe doesn't support Chroma DB files natively. Because of this, you integrate a custom\n",
-    "predictor component. This involves creating a Docker image, which then serves as your Inference Service. This approach\n",
+    "predictor component. This involves creating a Docker image, which then serves as your ISVC endpoint. This approach\n",
     "grants you a high level of customization, ensuring the service fits your requirements. You can find the necessary code\n",
     "and the Dockerfile for this custom predictor in the `dockerfiles/vectorstore` directory. But for a quicker setup,\n",
     "there's a pre-built option available: `dpoulopoulos/qna-vectorstore:v0.1.0`.\n",
     "\n",
-    "Once you're ready, this Notebook guides you through the necessary steps for creating a scalable Vector Store service.\n",
-    "First, let's import the libraries you'll need:"
+    "## Table of Contents\n",
+    "\n",
+    "1. [Logging the Vector Store as an Artifact](#logging-the-vector-store-as-an-artifact)\n",
+    "1. [Creating and Submitting the Inference Service](#creating-and-submitting-the-inference-service)\n",
+    "1. [Conclusion and Next Steps](#conclusion-and-next-steps)"
    ]
   },
   {
@@ -127,19 +130,19 @@
    "source": [
     "# Creating and Submitting the Inference Service\n",
     "\n",
-    "In the final segment of this Notebook, you create and submit an Inference Service via a YAML template and a Python\n",
-    "subprocess. This process unfolds as follows:\n",
+    "In the final segment of this Notebook, you create and submit an ISVC via a YAML template and a Python subprocess. This\n",
+    "process unfolds as follows:\n",
     "\n",
-    "1. Drafting the YAML Template: Here, you craft a YAML file that outlines the Inference Service's specifics. This\n",
-    "   captures elements like the service's name, the chosen Docker image, and additional configurations. After drafting,\n",
-    "   you save this YAML to a file for inspection and later submission.\n",
+    "1. Drafting the YAML Template: Here, you craft a YAML file that outlines the ISVC's specifics. This captures elements\n",
+    "   like the service's name, the chosen Docker image, and additional configurations. After drafting, you save this YAML\n",
+    "   to a file for inspection and later submission.\n",
     "1. Pushing the YAML Template: With your YAML template prepped, the next step is to present it to KServe for deployment.\n",
     "   You accomplish this by leveraging a Python subprocess to execute a shell command.\n",
     "\n",
-    "By the end of this section, you will have a running Inference Service that is ready to receive user queries and provide\n",
-    "context for answering them using the Vector Store. This marks the completion of your journey, from transforming\n",
-    "unstructured text data into structured vector embeddings, to creating a scalable service that can provide context based\n",
-    "on those embeddings.\n",
+    "By the end of this section, you will have a running ISVC that is ready to receive user queries and provide context for\n",
+    "answering them using the Vector Store. This marks the completion of your journey, from transforming unstructured text\n",
+    "data into structured vector embeddings, to creating a scalable service that can provide context based on those\n",
+    "embeddings.\n",
     "\n",
     "In the upcoming cell, input the name of the Docker image you constructed in the initial phase. If you wish to utilize\n",
     "the pre-fabricated one, simply leave the field untouched:"
@@ -243,19 +246,18 @@
     "# Conclusion and Next Steps\n",
     "\n",
     "Congratulations! You've successfully navigated through the process of logging the Chroma DB files as artifacts using\n",
-    "MLFlow, creating a custom Docker image, and setting up an Inference Service with KServe that retrieves these artifacts\n",
-    "to serve your Vector Store. This Inference Service forms the backbone of your question-answering application, enabling\n",
-    "you to efficiently answer queries based on the document embeddings we generated previously.\n",
+    "MLflow, creating a custom Docker image, and setting up an ISVC with KServe that retrieves these artifacts to serve your\n",
+    "Vector Store. This ISVC forms the backbone of your question-answering application, enabling you to efficiently answer\n",
+    "queries based on the document embeddings we generated previously.\n",
     "\n",
     "From here, there are two paths you can choose:\n",
     "\n",
-    "- Testing the Vector Store Inference Service: If you'd like to test the Vector Store Inference Service that you've just\n",
-    "  created, you can proceed to our third (optional) Notebook. This Notebook provides a step-by-step guide on how to\n",
-    "  invoke the Inference Service and validate its performance.\n",
-    "- Creating the LLM Inference Service: Alternatively, if you're ready to move on to the next stage of the project, you\n",
-    "  can jump straight to our fourth Notebook. In this Notebook, you create an Inference Service for the Large Language\n",
-    "  Model (LLM), which will work in conjunction with the Vector Store Inference Service to provide answers to user\n",
-    "  queries."
+    "- Testing the Vector Store ISVC: If you'd like to test the Vector Store ISVC that you've just created, you can proceed\n",
+    "  to the third (optional) Notebook. This Notebook provides a step-by-step guide on how to invoke the ISVC and validate\n",
+    "  its performance.\n",
+    "- Creating the LLM ISVC: Alternatively, if you're ready to move on to the next stage of the project, you\n",
+    "  can jump straight to our fourth Notebook. In this Notebook, you create an ISVC for the Large Language Model (LLM),\n",
+    "  which will work in conjunction with the Vector Store ISVC to provide answers to user queries."
    ]
   }
  ],
