question-answering: Improve the third Notebook
Improve the third Notebook by:
- Fixing typos and wording.
- Adding a table of contents.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/question-answering/03.document-prediction.ipynb
+++ b/demos/question-answering/03.document-prediction.ipynb
@@ -9,21 +9,23 @@
    "source": [
     "# Invoking and Testing the Vector Store Inference Service (Optional)\n",
     "\n",
-    "Welcome to the third part of our tutorial series on building a question-answering application over a corpus of private\n",
-    "documents using Large Language Models (LLMs). In our previous Notebooks, you've embarked on the journey of transforming\n",
-    "unstructured text data into structured vector embeddings and deploying an Inference Service to serve the Vector Store\n",
-    "that holds these embeddings.\n",
+    "Welcome to the third part of the tutorial series on building a question-answering application over a corpus of private\n",
+    "documents using Large Language Models (LLMs). In the previous Notebooks, you've embarked on the journey of transforming\n",
+    "unstructured text data into structured vector embeddings and deploying an Inference Service (ISVC) to serve the Vector\n",
+    "Store that holds these embeddings.\n",
     "\n",
-    "In this optional Notebook, you focus on invoking the Vector Store Inference Service you've created and testing its\n",
-    "performance. This is an essential step, as it allows us to verify the functionality of your service and observe how it\n",
-    "performs in practice. Throughout this Notebook, you construct suitable requests, communicate with the service, and\n",
-    "interpret the responses.\n",
+    "In this optional Notebook, you focus on invoking the Vector Store ISVC you've created and testing its performance. This\n",
+    "is an essential step, as it allows you to verify the functionality of your service and observe how it performs in\n",
+    "practice. Throughout this Notebook, you construct suitable requests, communicate with the service, and interpret the\n",
+    "responses.\n",
     "\n",
-    "By the end of this Notebook, you will gain practical insights into the workings of the Vector Store Inference Service\n",
-    "and will be well-prepared to integrate it into a larger system, alongside the Large Language Model Inference Service\n",
-    "that you create in the subsequent Notebook.\n",
+    "By the end of this Notebook, you will gain practical insights into the workings of the Vector Store ISVC and will be\n",
+    "well-prepared to integrate it into a larger system, alongside the LLM ISVC that you create in the subsequent Notebook.\n",
     "\n",
-    "Let's get started! As always, let's import the libraries you need:"
+    "## Table of Contents\n",
+    "\n",
+    "1. [Invoke the Inference Service](#invoke-the-inference-service)\n",
+    "1. [Conclusion and Next Steps](#conclusion-and-next-steps)"
    ]
   },
   {
@@ -46,7 +48,9 @@
     "tags": []
    },
    "source": [
-    "Next, you need to construct the URL you use in POST request. For this example, you use the V1 inference protocol,\n",
+    "# Invoke the Inference Service\n",
+    "\n",
+    "First, you need to construct the URL you use in POST request. For this example, you use the V1 inference protocol,\n",
     "described below:\n",
     "\n",
     "| API          | Verb | Path                          | Request Payload   | Response Payload                  |\n",
@@ -70,7 +74,7 @@
    },
    "outputs": [],
    "source": [
-    "DOMAIN_NAME = \"svc.cluster.local\"  # change this to your domain for external access\n",
+    "DOMAIN_NAME = \"svc.cluster.local\"\n",
     "NAMESPACE = os.environ['USER']\n",
     "DEPLOYMENT_NAME = \"vectorstore\"\n",
     "MODEL_NAME = DEPLOYMENT_NAME\n",
@@ -92,7 +96,7 @@
     "data = {\n",
     "  \"instances\": [{\n",
     "      \"input\": \"Who's Ada Lovelace?\",\n",
-    "      \"num_docs\": 4\n",
+    "      \"num_docs\": 4  # number of documents to retrieve\n",
     "  }]\n",
     "}\n",
     "\n",
@@ -122,14 +126,12 @@
    "source": [
     "# Conclusion and Next Steps\n",
     "\n",
-    "Well done! Through this Notebook, you've successfully interacted with and tested the Vector Store Inference Service.\n",
-    "You've learned how to construct and send requests to the service and how to interpret the responses. This hands-on\n",
-    "experience is crucial as it provides a practical understanding of the service's operation, preparing you for real-world\n",
-    "applications.\n",
+    "Well done! Through this Notebook, you've successfully interacted with and tested the Vector Store ISVC. You've learned\n",
+    "how to construct and send requests to the service and how to interpret the responses. This hands-on experience is\n",
+    "crucial as it provides a practical understanding of the service's operation, preparing you for real-world applications.\n",
     "\n",
-    "In the next Notebook, you extend your question-answering system by creating an Inference Service for the Large Language\n",
-    "Model (LLM). The LLM Inference Service works in conjunction with the Vector Store Inference Service to provide\n",
-    "comprehensive and accurate answers to user queries."
+    "In the next Notebook, you extend your question-answering system by creating an ISVC for the LLM. The LLM ISVC works in\n",
+    "conjunction with the Vector Store ISVC to provide comprehensive and accurate answers to user queries."
    ]
   }
  ],
