question-answering: Improve the fourth Notebook
Improve the fourth Notebook by:
- Fixing typos and wording.
- Including a table of contents.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/question-answering/04.serve-llm.ipynb
+++ b/demos/question-answering/04.serve-llm.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Welcome to the fourth part of the tutorial series on building a question-answering application over a corpus of private\n",
     "documents using Large Language Models (LLMs). In the previous Notebooks, you journeyed through the processes of creating\n",
-    "vector embeddings of our documents, setting up a Vector Store Inference Service, and testing its performance.\n",
+    "vector embeddings of our documents, setting up a Vector Store Inference Service (ISVC), and testing its performance.\n",
     "\n",
     "<figure>\n",
     "  <img src=\"images/llm.jpg\" alt=\"llm\" style=\"width:100%\">\n",
@@ -20,16 +20,20 @@
     "  </figcaption>\n",
     "</figure>\n",
     "\n",
-    "Now, you're moving towards the next crucial step: creating an Inference Service for the Large Language Model (LLM). This\n",
-    "Inference Service is the centerpiece of the question-answering system, working in tandem with the Vector Store Inference\n",
-    "Service to deliver comprehensive and accurate answers to user queries.\n",
+    "Now, you're moving towards the next crucial step: creating an ISVC for the LLM. This ISVC is the centerpiece of the\n",
+    "question-answering system, working in tandem with the Vector Store ISVC to deliver comprehensive and accurate answers to\n",
+    "user queries.\n",
     "\n",
-    "In this Notebook, you set up this LLM Inference Service. You see how to a Docker image for the custom predictor, the\n",
-    "role of the transformer component, define a KServe InferenceService YAML, and deploy the service. By the end of this\n",
-    "Notebook, you'll have a fully functioning LLM Inference Service that can accept user queries, interact with the Vector\n",
-    "Store, and provide insightful responses.\n",
+    "In this Notebook, you set up this LLM ISVC. You learn how to build a Docker image for the custom predictor, the\n",
+    "role of the transformer component, define a KServe ISVC YAML file, and deploy the service. By the end of this Notebook,\n",
+    "you'll have a fully functioning LLM ISVC that can accept user queries, interact with the Vector Store, and provide\n",
+    "insightful responses.\n",
     "\n",
-    "Let's dive in! Let's import the libraries you need:"
+    "## Table of Contents\n",
+    "\n",
+    "1. [Architecture](#architecture)\n",
+    "1. [Creating the Inference Service](#creating-the-inference-service)\n",
+    "1. [Conclusion and Next Steps](#conclusion-and-next-steps)"
    ]
   },
   {
@@ -54,20 +58,18 @@
     "# Architecture\n",
     "\n",
     "In this setup, an additional component, called a \"transformer\", plays a pivotal role in processing user queries and\n",
-    "integrating the Vector Store Inference Service with the LLM Inference Service. The transformer's role is to intercept\n",
-    "the user's request, extract the necessary information, and then communicate with the Vector Store Inference Service to\n",
-    "retrieve the relevant context. The transformer then takes the response of the Vector Store Inference Service (i.e., the\n",
-    "context), combines it with the user's query, and forwards the enriched prompt to the LLM predictor.\n",
+    "integrating the Vector Store ISVC with the LLM ISVC. The transformer's role is to intercept the user's request, extract\n",
+    "the necessary information, and then communicate with the Vector Store ISVC to retrieve the relevant context. The\n",
+    "transformer then takes the response of the Vector Store ISVC (i.e., the context), combines it with the user's query, and\n",
+    "forwards the enriched prompt to the LLM predictor.\n",
     "\n",
     "Here's a detailed look at the process:\n",
     "\n",
-    "1. Intercepting the User's Request: The transformer acts as a gateway between the user and the LLM inference service.\n",
-    "   When a user sends a query, it first reaches the transformer. The transformer extracts the query from the request.\n",
-    "1. Communicating with the Vector Store Inference Service: The transformer then takes the user's query and sends a POST\n",
-    "   request to the Vector Store Inference Service including the user's query in the payload, just like you did in the\n",
-    "   previous Notebook.\n",
-    "1. Receiving and Processing the Context: The Vector Store Inference Service responds by sending back the relevant\n",
-    "   context.\n",
+    "1. Intercepting the User's Request: The transformer acts as a gateway between the user and the LLM ISVC. When a user\n",
+    "   sends a query, it first reaches the transformer. The transformer extracts the query from the request.\n",
+    "1. Communicating with the Vector Store ISVC: The transformer then takes the user's query and sends a POST request to the\n",
+    "   Vector Store ISVC including the user's query in the payload, just like you did in the previous Notebook.\n",
+    "1. Receiving and Processing the Context: The Vector Store ISVC responds by sending back the relevant context.\n",
     "1. Combining the Context with the User's Query: The transformer then combines the received context with the user's\n",
     "   original query using a prompt template. This creates an enriched prompt that contains both the user's original\n",
     "   question and the relevant context from our documents.\n",
@@ -178,15 +180,14 @@
    "source": [
     "# Conclusion and Next Steps\n",
     "\n",
-    "Congratulations on completing this crucial step in this tutorial series! You've successfully built a Large Language\n",
-    "Model (LLM) Inference Service, and you've learned about the role of a transformer in enriching user queries with\n",
-    "relevant context from our documents. Together with the Vector Store Inference Service, these components form the\n",
-    "backbone of your question-answering application.\n",
+    "Congratulations on completing this crucial step in this tutorial series! You've successfully built an LLM ISVC, and\n",
+    "you've learned about the role of a transformer in enriching user queries with relevant context from our documents.\n",
+    "Together with the Vector Store ISVC, these components form the backbone of your question-answering application.\n",
     "\n",
-    "However, the journey doesn't stop here. The next and final step is to test the LLM Inference Service, ensuring that it's\n",
-    "working as expected and delivering accurate responses. This will help you gain confidence in your setup and prepare you\n",
-    "for real-world applications. In the next Notebook, you invoke the LLM Inference Service. You see how to construct\n",
-    "suitable requests, communicate with the service, and interpret the responses."
+    "However, the journey doesn't stop here. The next and final step is to test the LLM ISVC, ensuring that it's working as\n",
+    "expected and delivering accurate responses. This will help you gain confidence in your setup and prepare you for\n",
+    "real-world applications. In the next Notebook, you invoke the LLM ISVC. You see how to construct suitable requests,\n",
+    "communicate with the service, and interpret the responses."
    ]
   }
  ],
