question-answering: Improve the final Notebook
Improve the final Notebook by:
- Fixing typos and wording.
- Including a table of contents.

Signed-off-by: Dimitris Poulopoulos <dimitrios.poulopoulos@hpe.com>

--- a/demos/question-answering/05.question-answering.ipynb
+++ b/demos/question-answering/05.question-answering.ipynb
@@ -11,18 +11,21 @@
     "\n",
     "Welcome to the fifth and final part of the tutorial series on building a question-answering application over a corpus of\n",
     "private documents using Large Language Models (LLMs). In the previous Notebooks, you've covered the processes of\n",
-    "creating vector embeddings of our documents, deploying a Vector Store Inference Service, creating a Large Language Model\n",
-    "Inference Service, and enriching user queries with relevant context using an Inference service Transformer component.\n",
+    "creating vector embeddings of our documents, deploying a Vector Store Inference Service (ISVC), creating an LLM ISVC,\n",
+    "and enriching user queries with relevant context using an ISVC Transformer component.\n",
     "\n",
-    "In this Notebook, you focus on the crucial task of invoking and testing the LLM Inference Service you've created. This\n",
-    "is an important step in the development process as it allows you to validate the functionality and performance of your\n",
+    "In this Notebook, you focus on the crucial task of invoking and testing the LLM ISVC you've created. This is an\n",
+    "important step in the development process as it allows you to validate the functionality and performance of your\n",
     "service in a practical setting.\n",
     "\n",
-    "Throughout this Notebook, you see how to construct and send requests to the LLM Inference Service, interpret the\n",
-    "responses, and handle potential issues that might arise. By the end of this Notebook, you will have gained practical\n",
-    "experience in working with the LLM Inference Service, preparing you to integrate it into larger systems or applications.\n",
+    "Throughout this Notebook, you see how to construct and send requests to the LLM ISVC, interpret the responses, and\n",
+    "handle potential issues that might arise. By the end of this Notebook, you will have gained practical experience in\n",
+    "working with the LLM ISVC, preparing you to integrate it into larger systems or applications.\n",
     "\n",
-    "Let's get started by importing the libraries you need:"
+    "## Table of Contents\n",
+    "\n",
+    "1. [Invoking the LLM Inference Service](#invoking-the-llm-inference-service)\n",
+    "1. [Conclusion](#conclusion)"
    ]
   },
   {
@@ -45,6 +48,8 @@
     "tags": []
    },
    "source": [
+    "# Invoking the LLM Inference Service\n",
+    "\n",
     "You are now ready to test your service. Provide your question and get back the answer from the LLM inference service."
    ]
   },
@@ -117,8 +122,8 @@
     "more time than usual. Please exercise patience and allow for approximately 5 minutes. In the unlikely event that you\n",
     "encounter a time-out error, please attempt the process again.\n",
     "\n",
-    "Furthermore, increasing the number of retrieved documents (`num_docs`) increases the latency. For testing purposes just\n",
-    "keep this number as low as possible."
+    "Furthermore, increasing the number of retrieved documents (`num_docs`) increases the latency. For testing purposes keep\n",
+    "this number as low as possible."
    ]
   },
   {
@@ -132,15 +137,15 @@
     "\n",
     "Congratulations on reaching the finish line of this comprehensive tutorial! You've successfully developed an application\n",
     "capable of delivering responses to user queries in a natural language format. The journey has not only enhanced your\n",
-    "understanding but also allowed you to acquire hands-on experience in various facets of Large Language Models.\n",
+    "understanding but also allowed you to acquire hands-on experience in various facets of LLMs.\n",
     "\n",
     "Throughout this process, you've demystified the concept of a Vector Store, created custom predictor and transformer\n",
     "components, and learned to log artifacts with MLflow. Moreover, all these tasks have been accomplished within the\n",
     "comfortable and familiar confines of your JupyterLab environment.\n",
     "\n",
-    "In conclusion, you've taken significant strides in your journey of mastering Large Language Models, and how to\n",
-    "create real-world applications using the EzUA platform. Happy coding, and until the next tutorial, keep learning and\n",
-    "experimenting!"
+    "In conclusion, you've taken significant strides in your journey of mastering LLMs, and how to create real-world\n",
+    "applications using the EzUA platform. As a next step, you can follow the instructions in the README file and deploy the\n",
+    "front-end application of this service."
    ]
   }
  ],
